--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <!-- Feel free to change this text here -->
 <p>
+  test git repository.
+
   Fork me? Fork you, @octocat!
   Fork me? Fork you, @octocat!
   Fork me? Fork you, @octocat!
